# chatbot-created-by-claude-code

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  config.yaml  models.py  pyproject.toml  run_app.py
src/: __main__.py  app.py
src/models/: __init__.py  config.py  factory.py
src/ui/: __init__.py  history_sidebar.py
src/utils/: __init__.py  config.py  database.py  file_processing.py  history_manager.py  logging.py
tests/: conftest.py  test_app.py  test_file_processing.py  test_history_database.py  test_history_manager.py  test_models.py
