[project]
name = "chatbot-created-by-claude-code"
version = "0.1.0"
description = "Streamlit-based AI chatbot using OpenAI API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "langchain-anthropic>=0.3.14",
    "langchain-google-genai>=2.1.4",
    "watchdog>=6.0.0",
]

# [project.scripts]
# chatbot = "streamlit run app.py"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]
