[project]
name = "chatbot-created-by-claude-code"
version = "0.1.0"
description = "Multi-provider AI chatbot using LangChain and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "langchain-anthropic>=0.3.14",
    "langchain-google-genai>=2.1.4",
    "watchdog>=6.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "pypdf2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-magic>=0.4.27",
]

# [project.scripts]
# chatbot = "chatbot:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]
