[project]
name = "chatbot-created-by-claude-code"
version = "0.1.0"
description = "Multi-provider AI chatbot using LangChain and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=4.2.1",
    "watchdog>=6.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "pypdf2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-magic>=0.4.27",
    "bleach>=6.2.0",
]

# [project.scripts]
# chatbot = "chatbot:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]
